# UBB

./: .gitignore
Facultate/Anul 1/Sem 1/FP/Lab 13/: chestie.txt  secventa_munte_iterativ.py  secvente_munte_recursiv.py
Facultate/Anul 1/Sem 1/FP/Lab 7-9/: main.py
Facultate/Anul 1/Sem 2/AG/: AlgoritmiV2.7z  CMakeLists.txt  main.cpp
Facultate/Anul 1/Sem 2/AG/Algoritmi/: Johnson's algorithm
Facultate/Anul 1/Sem 2/AG/AlgoritmiV2/: CMakeLists.txt
Facultate/Anul 1/Sem 2/AG/Lab 1/: CMakeLists.txt  main.cpp
Facultate/Anul 1/Sem 2/AG/Lab 2/: CMakeLists.txt  main.cpp  problema 4.cpp  problema 4.h  problema1.cpp  problema1.h  problema2.cpp  problema2.h  problema3.cpp  problema3.h  problema5.cpp  problema5.h
Facultate/Anul 1/Sem 2/AG/Lab 3/: CMakeLists.txt  main.cpp
Facultate/Anul 1/Sem 2/AG/Lab 4/: CMakeLists.txt
Facultate/Anul 1/Sem 2/AG/Lab 5/: CMakeLists.txt
Facultate/Anul 1/Sem 2/Lab 2 -- 4/: CMakeLists.txt  main.c
Facultate/Anul 1/Sem 2/Lab 2 -- 4/domeniu/: lista.c  lista.h  oferta.h
Facultate/Anul 1/Sem 2/Lab 2 -- 4/errors/: errors.c  errors.h
Facultate/Anul 1/Sem 2/Lab 2 -- 4/infrastructura/: service.c  service.h
Facultate/Anul 1/Sem 2/Lab 2 -- 4/repository/: repo.c  repo.h
Facultate/Anul 1/Sem 2/Lab 2 -- 4/ui/: ui.c  ui.h
Facultate/Anul 1/Sem 2/Lab 2 -- 4/validator/: validator.c  validator.h
Facultate/Anul 1/Sem 2/Lab 2-4 rework/: CMakeLists.txt  errors.h  lista.c  lista.h  main.c  oferta.c  oferta.h  repo.c  repo.h  service.c  service.h  ui.c  ui.h  validator.h
Facultate/Anul 1/Sem 2/Lab5/: CMakeLists.txt  main.c
Facultate/Anul 1/Sem 2/Lab5/business/: service.c  service.h
Facultate/Anul 1/Sem 2/Lab5/domain/: expense.c  expense.h
Facultate/Anul 1/Sem 2/Lab5/infrastructure/: repo.c
Facultate/Anul 1/Sem 2/Lab5/presentation/: ui.c  ui.h
Facultate/Anul 1/Sem 2/Lab5/testing/: tests.c  tests.h
Facultate/Anul 1/Sem 2/OOP/: Lab 2-4.7z
Facultate/Anul 1/Sem 2/OOP/Lab 2-4/: CMakeLists.txt  main.c  oferta.h  service.c
Facultate/Anul 1/Sem 2/OOP/Lab 2-4 rework/: service.h  validator.c
Facultate/Anul 1/Sem 2/OOP/Lab 2-4/domeniu/: lista.c  lista.h
Facultate/Anul 1/Sem 2/OOP/Lab 2-4/errors/: errors.c  errors.h
Facultate/Anul 1/Sem 2/OOP/Lab 2-4/infrastructura/: service.c  service.h
Facultate/Anul 1/Sem 2/OOP/Lab 2-4/repository/: repo.c  repo.h
Facultate/Anul 1/Sem 2/OOP/Lab 2-4/ui/: ui.c  ui.h
Facultate/Anul 1/Sem 2/OOP/Lab 2-4/validator/: validator.c  validator.h
Facultate/Anul 1/Sem 2/OOP/Lab 6/: CMakeLists.txt  Contract.cpp  Contract.h  ContractCRUDGUI.h  ContractReadOnlyGUI.h  ContractTableModel.h  LinkedList.h  Repo.cpp  Repo.h  disciplina.cpp  disciplina.h  (+10 more)
Facultate/Anul 1/Sem 2/OOP/Lab5/: CMakeLists.txt
Facultate/Anul 1/Sem 2/OOP/Lab5/business/: service.c
Facultate/Anul 1/Sem 2/OOP/Lab5/errors/: error.c  error.h
Facultate/Anul 1/Sem 2/OOP/Lab5/infrastructure/: repo.h
Facultate/Anul 1/Sem 2/OOP/Lab5/testing/: tests.c
Facultate/Anul 1/Sem 2/OOP/Lab5/utils/: list.c  list.h
Facultate/Anul 1/Sem 2/OOP/Lab5/validation/: validator.c  validator.h
Facultate/Anul 1/Sem 2/OS/: CMakeLists.txt  main.c  rezolvareex1.c
Facultate/Anul 1/Sem 2/STD/: Lab 4.7z  Lab 6.7z
Facultate/Anul 1/Sem 2/STD/Lab 1/: CMakeLists.txt  dictionar.cpp  dictionar.h  main.cpp
Facultate/Anul 1/Sem 2/STD/Lab 1/Proiect C++/: Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h
Facultate/Anul 1/Sem 2/STD/Lab 1/Teste/: TestExtins.cpp  TestScurt.cpp
Facultate/Anul 1/Sem 2/STD/Lab 6/: CMakeLists.txt
Facultate/Anul 1/Sem 2/STD/Lab 6/TAD MultiDictionar/Proiect C++/: IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h
Facultate/Anul 1/Sem 2/STD/Lab 6/TAD MultiDictionar/Teste/: TestExtins.cpp  TestScurt.cpp
Facultate/Anul 1/Sem 2/STD/Lab 7/: CMakeLists.txt
Facultate/Anul 1/Sem 2/STD/Lab 7/TAD Colectie/Proiect C++/Colectie (cu rel)/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Facultate/Anul 1/Sem 2/STD/Lab 7/TAD Colectie/Teste (cu relatie)/: TestScurt.cpp  TestScurt.h
Facultate/Anul 2/Sem 2/Engleza/: Writing.md
(+1531 files in other folders)
